<resources>

    /// Login Page ///
    <string name="app_name">Go4Lunch</string>
    <string name="app_slogan" translatable="false">Find a nice restaurant and invite your co-workers for lunch!</string>

    /// Notification String ///
    <string name="notification_title">You are going to ea at </string>
    <string name="notification_line">With : </string>

    /// Bottom Navigation Bar ///
    <string name="bottom_map_btn_text" translatable="false">Map View</string>
    <string name="bottom_List_btn_text" translatable="false">List View</string>
    <string name="bottom_workmates_btn_text" translatable="false">Workmates</string>

    /// MAP VIEW ///
    <string name="mapview_actionbar_title" translatable="false">I\'m Hungry!</string>

    /// List view ///
    <string name="listview_actionbar_title" translatable="false">I\'m Hungry!</string>

    /// Workmates View ///
    <string name="workmates_actionbar_title" translatable="false">Available workmates</string>

    /// SearchBar Hint ///

    <string name="searchbar_restaurant_hint" translatable="false">Search Restaurants</string>
    <string name="searchbar_workmates_hint" translatable="false">Search workmates</string>

    /// Navigation Drawer ///

    <string name="nav_drawer_first_title" translatable="false">YOUR LUNCH</string>
    <string name="nav_drawer_second_title" translatable="false">SETTINGS</string>
    <string name="nav_drawer_third_title" translatable="false">LOGOUT</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="header_exemple" translatable="false">John SMITH</string>
    <string name="go4lunch_logo" translatable="false">Go4Lunch Logo</string>
    <string name="get_location_button" translatable="false">get your location button</string>
    <string name="restaurant_range_example" translatable="false">120m</string>
    <string name="listview_restaurant_picture_desc" translatable="false">Picture of the restaurant</string>
    <string name="listview_contributors_example" translatable="false">(3)</string>
    <string name="iv_contributors_icon_desc" translatable="false">contributors icon</string>
    <string name="item_restaurant_name_example" translatable="false">Le Zinc</string>
    <string name="item_restaurant_desc_example" translatable="false">12 rue du Faubourg Poissonnière</string>
    <string name="item_open_restaurant_status_example" translatable="false">Open until 2.30pm</string>
    <string name="tv_workmate_status_example" translatable="false">Scarlett is eating french(Le Zinc)</string>
    <string name="workmate_profile_picture" translatable="false">workmate profile picture</string>
    <string name="restaurant_reservation_button_desc" translatable="false">restaurant reservation button</string>
    <string name="btn_call_text" translatable="false">CALL</string>
    <string name="btn_like_text" translatable="false">LIKE</string>
    <string name="btn_website_text" translatable="false">WEBSITE</string>
    <string name="restaurant_detail_liked_star_desc" translatable="false">star to display if the restaurant is liked or not</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="facebook_app_id" translatable="false">2826630187580441</string>
    <string name="facebook_client_token" translatable="false">50995227bbb35b2c841f8d8dd600ef31</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2826630187580441</string>
    <string name="workmate_restaurant_no_choice">hasn\'t decided yet</string>
    <string name="workmate_restaurant_choice">is eating at</string>
    <string name="no_restaurant_available">No result for this query</string>
    <string name="notification_setting_header" translatable="false">Notification</string>
    <string name="notification_setting_title">Enable message notifications</string>
    <string name="error_during_authentication">An error occur during authentication. please retry.</string>
    <string name="empty_field">you cannot let this field empty</string>
    <string name="wrong_email_format">Wrong format, please follow as aaaa@aaaa.aa</string>
    <string name="username_lenght_rule">Your username should contain at least 3 characters</string>
    <string name="email_does_not_match">Emails are not the same</string>
    <string name="password_lenght_rule">Password must at least contain 8 character</string>
    <string name="password_does_not_match">password are not the same</string>
    <string name="twitter_provider_id" translatable="false">twitter.com</string>
    <string name="providerFrParamValue" translatable="false">fr</string>
    <string name="ProviderLangKeyParam" translatable="false">lang</string>
    <string name="Facebook_auth_cancel">Facebook authentication canceled</string>
    <string name="FacebookAuthErrorLog" translatable="false">Facebook auth error</string>
    <string name="facebook_public_profile_permission" translatable="false">public_profile</string>
    <string name="facebook_email_permission" translatable="false">email</string>
    <string name="google_activity_result_error_message">an error occurred during google authentication</string>
    <string name="facebook_auth_credential_error_message">An error occurred during facebook authentication</string>
    <string name="twitter_authentication_error_message">An error occurred during twitter login</string>
    <string name="scheme_tel_string" translatable="false">tel</string>
    <string name="user_no_restaurant_choosen">You don\'t have choose a restaurant yet!</string>


</resources>