<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mapView">

    <fragment
        android:id="@+id/nav_restaurantDetail"
        android:name="com.example.go4lunch.ui.restaurantDetail.RestaurantDetailFragment"
        android:label="@string/nav_drawer_first_title"
        tools:layout="@layout/fragment_restaurant_detail" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.go4lunch.ui.gallery.GalleryFragment"
        android:label="@string/nav_drawer_second_title"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/nav_mapView"
        android:name="com.example.go4lunch.ui.mapView.MapFragment"
        android:label="@string/mapview_actionbar_title"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_listView"
        android:name="com.example.go4lunch.ui.listView.RestaurantListFragment"
        android:label="@string/listview_actionbar_title"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/nav_workmatesView"
        android:name="com.example.go4lunch.ui.workmatesView.WorkmateListFragment"
        android:label="@string/workmates_actionbar_title"
        tools:layout="@layout/fragment_workmates_list" />


</navigation>