<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_header_background_png">

    <ImageView
        android:id="@+id/iv_go4lunch_logo"
        android:layout_width="226dp"
        android:layout_height="189dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/ic_logo4lunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go4lunch_logo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_go4lunch_logo" />



    <TextView
        android:id="@+id/et_app_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <Button
        android:id="@+id/btn_facebook_login"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="#3B5998"
        android:drawableLeft="@drawable/ic_facebook_icon"
        android:text="Sign in with Facebook"
        android:textAllCaps="false"
        android:singleLine="true"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_app_slogan" />

    <Button
        android:id="@+id/ntm_google_login"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:buttonSize="wide"
        android:text="Sign in with Google"
        android:textSize="14sp"
        android:textColor="@color/secondaryTextColor"
        android:textAllCaps="false"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/ic_icon_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook_login"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/btn_twitter_login"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:buttonSize="wide"
        android:text="Sign in with Twitter"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:backgroundTint="#00acee"
        android:drawableLeft="@drawable/ic_twitter_circled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ntm_google_login"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/btn_email_login"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:buttonSize="wide"
        android:text="Sign in with Email"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:backgroundTint="#FFFFFF"
        android:textColor="@color/secondaryTextColor"
        android:drawableLeft="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_twitter_login"
        app:layout_constraintVertical_bias="0.026" />


</androidx.constraintlayout.widget.ConstraintLayout>